src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>EDP1__BuySignals__c</fullName>
        <label>Total Buy Signals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDP1__MostRecentActivityDate__c</fullName>
        <label>Most Recent Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__MostRecentBuySignalDate__c</fullName>
        <label>Most Recent Buy Signal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__TotalInboundActivity__c</fullName>
        <label>Total Inbound Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDP1__TotalOpenOpportunities__c</fullName>
        <label>Total Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EDP1__TotalOpportunities__c</fullName>
        <label>Total Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Employee_Size_Range__c</fullName>
        <label>Employee Size Range</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Spend__c</fullName>
        <label>Estimated Annual Spend (All Paint)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated__c</fullName>
        <label>Estimated Monthly Paint Usage</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;50 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-124 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;124 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under 10 gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 to 20 gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 to 45 gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 45 gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;125 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;124 Gallons</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Store__c</fullName>
        <description>Store number an event was held (MMT/PRo Blitz etc)</description>
        <label>Event Store</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this contractor an existing customer?</description>
        <label>Existing Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experience_of_designer_training_seminar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Experience of designer training /seminar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experience_of_painter_training_seminar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Experience of painter training / seminar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exporter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exporter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exterior_Paint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exterior Paint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Sale_Date1__c</fullName>
        <description>rollup summary from opty</description>
        <label>First Sale Date</label>
        <summarizedField>Opportunity.First_Sale_Date__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Sale_Date__c</fullName>
        <description>Compare POS and DTP dates and provide the first of the two.</description>
        <formula>First_Sale_Date1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Sale Date old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Floor_Coatings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Floor Coatings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Franchise_Specialty_Desc_1__c</fullName>
        <label>Franchise_Specialty_Desc_1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise_Specialty_Desc_2__c</fullName>
        <label>Franchise_Specialty_Desc_2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gallons__c</fullName>
        <label>Gallons</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geographical_Work_Type__c</fullName>
        <label>Geographical Work Type</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Purchased__c</fullName>
        <formula>if(ISBLANK(Last_Sale_Date1__c),&quot;No&quot;, &quot;Yes&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Purchased</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiTouchAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hi-Touch Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hospitality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hospitality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_did_you_find_out_about_Behr__c</fullName>
        <label>How did you find out about Behr</label>
        <picklist>
            <picklistValues>
                <fullName>Referal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ads (Soufun, Weibo, Subway, Newspaper, Magazine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events (PR, Road Show, Conference, Trade Show)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_years_in_business__c</fullName>
        <label>How many years in business</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_years_in_paint_industry__c</fullName>
        <label>How many years in paint industry</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InStore_Rep_email__c</fullName>
        <label>InStore Rep email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Inactive_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Affiliations__c</fullName>
        <inlineHelpText>Does account belong to any trade organizations? 
If YES, select all that apply from list below.</inlineHelpText>
        <label>Industry Affiliations</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Specific_Description__c</fullName>
        <label>Industry-Specific Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instore_Rep__c</fullName>
        <formula>THD_Home_Store__r.Behr_Store_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instore Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Paint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interior Paint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LYTD_C_C_plus_DTP__c</fullName>
        <description>LYTD C&amp;C plus DTP</description>
        <formula>CC_LYTD1__c +  DTP_LYTD1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actuals LYTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LY_C_C_plus_DTP__c</fullName>
        <description>LY C&amp;C plus DTP</description>
        <formula>DTP_LY1__c + CC_LY1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actuals LY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Sale_Date1__c</fullName>
        <description>Rollup from opty</description>
        <label>Last Sale Date</label>
        <summarizedField>Opportunity.Last_Sale_Date__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Sale_Date__c</fullName>
        <formula>Last_Sale_Date1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <label>Lead Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Behr Pro Marketing Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Lead</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Promotion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Behr In-Store Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behr PPSSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BehrPRO Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Depot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mktg-driven National Event/Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Event/Trade Show</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MMT_Team_Location__c</fullName>
        <label>MMT Team Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Maintance Repair Operations</description>
        <label>MRO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <defaultValue>&quot;China&quot;</defaultValue>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Street</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed_Amount__c</fullName>
        <description>rollup from opty for managed sales amount</description>
        <label>Managed Amount</label>
        <summarizedField>Opportunity.Managed_Amount__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Management_Company_Name__c</fullName>
        <label>Management Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>Key market segments.</description>
        <inlineHelpText>Segment must be selected. DO NOT select THD Pilot Programs (for internal reporting purposes ONLY).</inlineHelpText>
        <label>Market Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B(OEM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goverment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painting and Wall Covering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD Pilot Programs</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Sub_Segment__c</fullName>
        <description>Sub-segments tied to key markets and contractor categories.</description>
        <inlineHelpText>Must choose one.</inlineHelpText>
        <label>Market Sub Segment</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>New Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair &amp; Remodel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Construction-Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Construction-Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carryout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Sub_Segment_old__c</fullName>
        <label>Market Sub Segment(old)</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carryout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Construction-Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Construction-Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metro_Area__c</fullName>
        <label>Metro Area</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Government__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this contractor a military or government organization?</description>
        <label>Military / Government</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multi_Family_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi Family Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Account__c</fullName>
        <label>National Account</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Multiple_branded_store__c</fullName>
        <label>No. Multiple branded store</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Single_branded_store__c</fullName>
        <label>No. Single branded store</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_days_gone_in_a_year__c</fullName>
        <formula>TODAY()- Date(YEAR(today()), 01, 01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No days gone in a year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_days_left_in_the_year__c</fullName>
        <formula>Date(YEAR(today()), 12, 31) - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No days left in the year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Properties_Managed__c</fullName>
        <inlineHelpText>Related to Market Segment Propery Management</inlineHelpText>
        <label>No. of Properties Managed</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>1 - 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_big_size_deco_firm_revenue_100M__c</fullName>
        <label>No. of big size deco firm (revenue &gt;100M</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_brand__c</fullName>
        <label>No. of brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_deco_firms__c</fullName>
        <formula>No_of_big_size_deco_firm_revenue_100M__c  +  No_of_middle_size_deco_firm_revenue_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of deco firms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_direct_retail_stores__c</fullName>
        <formula>No_Single_branded_store__c  +  No_Multiple_branded_store__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of direct retail stores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_employee__c</fullName>
        <formula>No_of_sales_people__c  +  No_of_store_employee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of employee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_middle_size_deco_firm_revenue_5__c</fullName>
        <label>No. of middle size deco firm (revenue &gt;5</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_sales_people__c</fullName>
        <label>No. of sales people</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_store_employee__c</fullName>
        <label>No. of store employee</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_sub_dealers_retailers_in_distri__c</fullName>
        <label>No. of sub-dealers / retailers in distri</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_vehicle__c</fullName>
        <label>No. of vehicle</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Supplier__c</fullName>
        <label>Other Supplier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paint_Crew_Type__c</fullName>
        <inlineHelpText>Related to Market Segment General Contractor</inlineHelpText>
        <label>Employee Type</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>Subcontracted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Paint_Crews__c</fullName>
        <inlineHelpText>Related to Market Segment Painting and Wall Covering</inlineHelpText>
        <label># of Paint Crews</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>1-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 and more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Painter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Painter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Length__c</fullName>
        <description>It will Calculate length of the digits filled in Phone field.</description>
        <formula>LEN( Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Brands__c</fullName>
        <label>Preferred Brands</label>
        <picklist>
            <picklistValues>
                <fullName>Benjamin Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comex (Frazee/Kwal/Color Wheel/Parker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunn Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG (Olympic/Pittsburgh/Porter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherwin-Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vista</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Previous_suppliers_name__c</fullName>
        <label>Previous supplier</label>
        <picklist>
            <picklistValues>
                <fullName>Behr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benjamin Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunn-Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glidden (THD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glidden (PRO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherwin Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vista</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Primary_SIC_Description__c</fullName>
        <label>Primary SIC Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_SIC__c</fullName>
        <label>Primary SIC</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProVP__c</fullName>
        <label>ProVP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Reward_Level__c</fullName>
        <label>Pro Reward Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Rewards_Account_Number__c</fullName>
        <inlineHelpText>Account number used in Pro Rewards system. 
Only enter numbers (Example: 1234567890). 
Do not include any dashes, parentheses, etc.</inlineHelpText>
        <label>Pro Rewards Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Rewards_Activation_Store__c</fullName>
        <description>HD Home Store account was, or will be, set up on Pro Rewards in.</description>
        <inlineHelpText>HD Home Store account was, or will be, set up on Pro Rewards in.</inlineHelpText>
        <label>Pro Rewards Activation Store</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interests__c</fullName>
        <label>Product Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Exterior Paints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Wood Stains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faux &amp; Decorative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Coatings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Paints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Int./Ext. Concrete Stains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterproofers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood &amp; Concrete Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Product(s) Not Listed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None/Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Projected_Revenue__c</fullName>
        <formula>(  DTP_TYTD1__c   / No_days_gone_in_a_year__c )* No_days_left_in_the_year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected DTP Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Properties_Managed_Commercial__c</fullName>
        <label># Properties Managed (Commercial)</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None Selected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>